# curiosities

./: CLAUDE.md  README.md
daylight-visualization/: README.md  app.py  pyproject.toml
daylight-visualization/daylight/: __init__.py  calculations.py  visualization.py
daylight-visualization/tests/: test_calculations.py
northern-city-map/: .gitattributes  README.md  cities1000.txt  latitude_population.py  longitude_population.py  main.py  pareto_cities.py  pyproject.toml
