[project]
name = "daylight-visualization"
version = "0.1.0"
description = "Interactive visualization of daylight length variations across latitudes and time"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.17.0",
    "folium>=0.15.0",
    "matplotlib>=3.8.0",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daylight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
